fixed the text align for the about me section.

--- a/style.css
+++ b/style.css
@@ -40,6 +40,10 @@ h2 {
     margin-bottom: 5px;
   }
 
+#about {
+  text-align: cetner;
+}
+
 .about-text {
   font-family: cursive;
 }
